--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <h1>Please complete the following on a desktop of laptop:</h1>
     <p>Welcome to another christmas challenge.</p>
     <p>Get the high score in each of the below games to get a clue.</p>
-    <a href="/hiddenobject/index">Hidden object game</a>
+    <a href="https://shepuk.github.io/kellyxmas/hiddenobject/index.html">Hidden object game</a>
     <br />
-    <a href="/ninja/index">Ninja jump game</a>
+    <a href="https://shepuk.github.io/kellyxmas/ninja/index.html">Ninja jump game</a>
     <br />
-    <a href="/snake/index">Snake game</a>
+    <a href="https://shepuk.github.io/kellyxmas/snake/index.html">Snake game</a>
     <br />
     <br />
     <br />
