--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>Give the secret word to Paul for the next clue</p>
     </div>
     <h1>Hello Kelly</h1>
-    <h1>Please complete the following on a desktop of laptop:</h1>
+    <h1>Please complete the following on a desktop or laptop:</h1>
     <p>Welcome to another christmas challenge.</p>
     <p>Get the high score in each of the below games to get a clue.</p>
     <a href="https://shepuk.github.io/kellyxmas/hiddenobject/index.html">Hidden object game</a>
